use file locking for dealing with multiple process
- add file-lock dependency
- change repositories to be BTreeSet rather than simple vec
- new behaviour, multiple calls to rhq will block and wait for the
  last operation are done

TODO: there might still be a chance that data race will be happen
      since Cache are being initialized at beginning with file lock
      read mode on both side (R/W).

Practical solution might include changes :
- don't store a Cache in memory, lock could have smaller context,
when reading and then saving the contents of registry, however
for any changes it need to load from file directly
so it will always get fresh result

- use mmap so that we don't need to protect the whole index file, but
need alternative for serializing the content of struct, this might
include custom serde (per block size). We might only need to store
name + local path in index and store metadata on another files.

- use sled as backing storage for index, solve everything elses.

Signed-off-by: zerosign <r1nlx0@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rhq"
 description = "A repository management tool"
-version = "0.4.0-dev"
+version = "0.4.0-dev-mp"
 edition = "2018"
 authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
 license = "MIT"
@@ -37,3 +37,4 @@ shellexpand = "1"
 toml = "0.5"
 url = "2"
 walkdir = "2"
+file-lock = "1.1.20"
